--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -13,6 +13,7 @@
 <form action="/score" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= hidden_field_tag :letters, @letters %>
+  <%= hidden_field_tag :start_time, @start_time %>
   <input type="text" name="user_input">
   <input type="submit" value="Play" class="button">
 </form>
